concord_macros/tests/trybuild/fail/sema/policy/same_layer_duplicate_profile.rs
use concord_macros::api;

api! {
    client DuplicateProfileApi {
        base "https://example.com"

        profiles {
            profile read {}
        }

        default {
            profile read
            profile read
        }
    }
}

fn main() {}
