concord_macros/tests/trybuild/fail/sema/policy/same_layer_duplicate_profile.stderr
error: duplicate profile `read` at this attachment site
  --> tests/trybuild/fail/sema/policy/same_layer_duplicate_profile.rs:13:21
   |
13 |             profile read
   |                     ^^^^
